(executables
 (libraries morph morph_client morph_core mtime mtime.clock.os routes logs
   logs.fmt fmt.tty lwt)
 (names getting_started simple_proxy simple_switch_based_router
   with_routes_package writing_middleware))

(alias
 (name docs-examples)
 (deps getting_started.exe simple_proxy.exe simple_switch_based_router.exe
   with_routes_package.exe writing_middleware.exe))

(rule
 (targets getting_started.ml)
 (deps getting-started.md)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml-mdx pp %{deps}))))

(rule
 (targets simple_proxy.ml)
 (deps simple-proxy.md)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml-mdx pp %{deps}))))

(rule
 (targets simple_switch_based_router.ml)
 (deps simple-switch-based-router.md)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml-mdx pp %{deps}))))

(rule
 (targets with_routes_package.ml)
 (deps with-routes-package.md)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml-mdx pp %{deps}))))

(rule
 (targets writing_middleware.ml)
 (deps writing-middleware.md)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml-mdx pp %{deps}))))
